final update done

--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: 1010, Dover Road, #01-192V , Singapore - 139658 </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: sales@sanraxglobal.org </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: +65 93809366</li>
                         </ul>
                         <ul></ul>
                     </div>
