--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="intro-text" style="margin-right: 7px;"></div>
         </div>
     </header>
-    <section id="services" style="margin-right: -59px;"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="#services" style="margin-right: 0px;margin-bottom: 0px;margin-left: 671px;margin-top: 7px;">Tell me more</a></section>
+    <section id="services" style="margin-right: -59px;"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="about.html" style="margin-right: 0px;margin-bottom: 0px;margin-left: 671px;margin-top: 7px;">Tell me more</a></section>
     <section id="portfolio" class="bg-light" style="margin-bottom: -76px;margin-top: -32px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <div class="container">
             <div class="row">
@@ -66,16 +66,7 @@
                         <p class="text-muted">Cosmetics</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-                        <div class="portfolio-hover" style="background: rgba(14,143,122,0.77);">
-                            <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/download (3).jpeg"></a>
-                    <div class="portfolio-caption">
-                        <h4>Perfumes</h4>
-                        <p class="text-muted">Body Fragrances</p>
-                    </div>
-                </div>
+                
                 <div class="col-sm-6 col-md-4 portfolio-item">
                     <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                         <div class="portfolio-hover" style="background: rgba(14,143,122,0.77);">
@@ -122,14 +113,14 @@
     <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
             <div class="container">
-                <div class="row justify-content-center" >
+                <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: 1010, Dover Road, #01-192V , Singapore - 139658 </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: sales@sanraxglobal.org </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: +65 93809366</li>
                         </ul>
                         <ul></ul>
                     </div>
