--- a/location.html
+++ b/location.html
@@ -48,29 +48,29 @@
                 </div>
             </div>
                 <div class="row" style="margin-top: 44px;">
-                    <div class="col-md-12 col-lg-6" style="height: 483px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3538.918990305218!2d-109.93999038546625!3d27.502894741055034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86c81586bf6750cd%3A0x7b3676ba708e69e4!2sDENTRILAB%20Radiolog%C3%ADa%20y%20Laboratorio%20Dental!5e0!3m2!1sen!2smx!4v1606384575901!5m2!1sen!2smx" width="100%" height="400px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+                    <div class="col-md-12 col-lg-6" style="height: 483px;"><iframe src="https://www.google.co.in/maps/place/Society+of+Cosmetic+Scientists+(Singapore)/@1.3098033,103.7735024,18z/data=!4m8!1m2!2m1!1s1010,+Dover+Road,+%2301-192V+,+Singapore+-+139658!3m4!1s0x31da19cb63a2e77b:0x87b8c5338854dc35!8m2!3d1.3097009!4d103.7745844" width="100%" height="400px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
                     <div class="col-md-6 col-lg-3" style="margin-left: 214px;">
                         <h2 class="h4" style="margin-top: 35px;color: #00b5a8;border-color: #23295f;height: 49px;"><i class="fa fa-user" style="color: #00b5a8;"></i>&nbsp;Contact Us @</h2>
                         <div style="padding-top: 10px;"><span><strong>Mail</strong><br></span></div>
-                        <div><span>contact@dentrilab.com</span></div>
-                        <div style="padding-top: 10px;"><span><strong>Telephone</strong><span><br>(644) 2 18 93 82<br></span></span>
+                        <div><span>sales@sanraxglobalcom</span></div>
+                        <div style="padding-top: 10px;"><span><strong>Telephone</strong><span><br>+65 93809366<br></span></span>
                         </div>
-                        <h2 class="h4" style="margin-top: 35px;color: #00b5a8;height: 48px;"><i class="fa fa-location-arrow" style="color: #00b5a8;"></i>&nbsp;Locate Us</h2><span><strong>Dentrilab | Ciudad Obregón, Sonora</strong><br></span><span>Calle Zacatecas 458<br>Col. Norte<br>C. P. 85040<br></span></div>
+                        <h2 class="h4" style="margin-top: 35px;color: #00b5a8;height: 48px;"><i class="fa fa-location-arrow" style="color: #00b5a8;"></i>&nbsp;Locate Us</h2><span><strong></strong>1010, Dover Road, #01-192V , Singapore - 139658</strong>><br></span></div>
                 </div>
             </div>
         </div>
     </section>
-    <div class="footer-clean" style="background: rgb(255,255,255);">
+    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
-            <div class="container" style="background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);>
-                <div class="row justify-content-center" style="background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
+            <div class="container">
+                <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: 1010, Dover Road, #01-192V , Singapore - 139658 </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: sales@sanraxglobal.org </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: +65 93809366</li>
                         </ul>
                         <ul></ul>
                     </div>
