--- a/market.html
+++ b/market.html
@@ -55,7 +55,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding: 20px;background: #027f62;margin-left: 6px;margin-right: -14px;">
                             <h1 style="margin-right: 0px;margin-left: 36px;font-family: Poppins, sans-serif;">Sanrax Global Pte. Ltd.</h1>
                             <hr>
-                            <p style="margin-bottom: 10px;margin-left: 34px;font-family: Poppins, sans-serif;"><br>We&nbsp;classify&nbsp;ourselves&nbsp;in&nbsp;a&nbsp;sustainable&nbsp;manufacturing&nbsp;market&nbsp;place&nbsp;where&nbsp;there&nbsp;is&nbsp;harmony&nbsp;between&nbsp;nature&nbsp;and&nbsp;business!&nbsp;We&nbsp;believe&nbsp;eco-friendly&nbsp;businesses&nbsp;are&nbsp;the&nbsp;way&nbsp;to&nbsp;go...<br><br></p>
+                            <p style="margin-bottom: 10px;margin-left: 34px;font-family: Poppins, sans-serif;"><br>We&nbsp;classify&nbsp;ourselves&nbsp;in&nbsp;a&nbsp;sustainable&nbsp;manufacturing&nbsp;market&nbsp;<br>place&nbsp;where&nbsp;there&nbsp;is&nbsp;harmony&nbsp;between&nbsp;nature&nbsp;and&nbsp;business!&nbsp;<br>We&nbsp;believe&nbsp;eco-friendly&nbsp;businesses&nbsp;are&nbsp;the&nbsp;way&nbsp;to&nbsp;go...<br><br></p>
                             <div
                                 style="text-align:center"><button class="btn btn-light btn-lg" type="button">Learn More</button></div>
                     </div>
@@ -64,35 +64,17 @@
         </div>
         </div>
     </section>
-    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159), #ffffff 36%, rgb(255,255,255) 67%, rgb(194,176,159)), rgb(255,255,255);">
+    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>Control menu</h3>
-                        <ul>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/manufacturer">Producători</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=account/voucher">Vouchere cadou</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=affiliate/login">Afiliați</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/special">Oferte speciale</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>INFORMATION</h3>
-                        <ul>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=6" style="background: rgba(255,0,0,0);">Address</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=3" style="background: rgba(255,0,0,0);">Privacy Policiy</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=5" style="background: rgba(255,0,0,0);">Terms And Conditions</a></li>
-                        </ul>
-                    </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>&nbsp; Address</li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>&nbsp;Email:</li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>&nbsp;Telephone:</li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: 1010, Dover Road, #01-192V , Singapore - 139658 </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: sales@sanraxglobal.org </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: +65 93809366</li>
                         </ul>
                         <ul></ul>
                     </div>
