--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                             <hr>
                             <p style="margin-bottom: 10px;margin-left: 34px;font-family:Poppins, sans-serif"><br>We are a leading Global Exporters company of Palm Oil Products for the past decade. We are proud to have great number of satisfied customers who desire our products in mainly the following categories: Oleochemicals, Glycerine,
                                 Soap Noodles, Perfumes, PFAD, Palm Stearin, Palm Acid Oil.<br><br></p>
-                            <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Learn More</button></div>
+                            <div style="text-align:center"><button class="btn btn-light btn-lg" type="button" href="contact.html">Learn More</button></div>
                         </div>
                     </div>
                 </div>
